--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,3 @@
-# The following is the order of the links in the header of the website.
-#
-# Changing the order here will adjust the order and you can also add additional
-# links. Removing a link prevents it from showing in the header, but does not
-# prevent it from being included in the site.
-
 main:
   - title: "About"
     url: /about/
@@ -11,8 +5,14 @@ main:
   - title: "Research"
     url: /research/
 
+  - title: "Data & Code"
+    url: /data/
+
   - title: "Publications"
     url: /publications/
+
+  - title: "Talks"
+    url: /talks/
 
   - title: "Teaching"
     url: /teaching/
